cli: ceph: add support to ping monitors
Signed-off-by: Joao Eduardo Luis <joao.luis@inktank.com>

--- a/src/ceph.in
+++ b/src/ceph.in
@@ -472,6 +472,19 @@ def complete(sigdict, args, target):
     return 0
 
 ###
+# ping a monitor
+###
+def ping_monitor(cluster_handle, name):
+    if 'mon.' not in name:
+        print >> sys.stderr, '"ping" expects a monitor to ping; try "ping mon.<id>"'
+        return 1
+
+    mon_id = name[len('mon.'):]
+    s = cluster_handle.ping_monitor(mon_id)
+    print s
+    return 0
+
+###
 # main
 ###
 
@@ -577,7 +590,14 @@ def main():
         print >> sys.stderr, '"{0} tell" is deprecated; try "tell {0}.<id>" instead (id can be "*") '.format(childargs[0])
         return 1
 
+    if childargs[0] == 'ping':
+        if len(childargs) < 2:
+            print >> sys.stderr, '"ping" requires a monitor name as argument: "ping mon.<id>"'
+            return 1
+
     try:
+        if childargs[0] == 'ping':
+            return ping_monitor(cluster_handle, childargs[1])
         cluster_handle.connect()
     except KeyboardInterrupt:
         print >> sys.stderr, 'Cluster connection aborted'
